<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recuperando_fotos_com_imageview"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:gravity="start"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ultilizando_mapas_map_view"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:gravity="start"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/localiza_o_do_usuario_com_location_api"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:gravity="start"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rotas"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:gravity="start"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pontos_interesse"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:gravity="start"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usando_webview_em_seus_apps"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:gravity="start"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sons_audiomaneger"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:gravity="start"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/videos_mediaplayer"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:gravity="start"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anima_o_em_views_com_view_animations"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:gravity="start"/>




</LinearLayout>